--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -23,7 +23,7 @@
   <!--[if IE 9]><!--> <script src="scripts/ie/matchMedia.js"></script>  <!--<![endif]--> 
  </head>
  <body ng-app="app" id="app" class="app {{themeActive}}" custom-page ng-class="{'layout-horizontal': isLayoutHorizontal}" ng-controller="AppCtrl">
-  <header class="site-head clearfix" id="site-head" ng-controller="HeadCtrl" ng-include=" 'views/header.html' "></header>
+  <header class="site-head clearfix" id="site-head" ng-include=" 'views/header.html' "></header>
 		
   <div class="main-container clearfix">
    <aside class="nav-wrap" id="site-nav" ng-controller="NavCtrl" ng-include=" 'views/nav.html' " custom-scrollbar></aside>
@@ -52,25 +52,14 @@
   <script src="scripts/plugins/bootstrap-slider.min.js"></script>
   <script src="scripts/plugins/textAngular.min.js"></script>
   <script src="scripts/plugins/perfect-scrollbar.min.js"></script>
-  <script src="scripts/plugins/chartist.js"></script> 
-  <script src="scripts/plugins/angular.easypiechart.js"></script>
   <script src="scripts/plugins/angular-skycons.min.js"></script>
   <script src="scripts/plugins/loading-bar.min.js"></script>
-  <script src="scripts/plugins/angular-fullscreen.js"></script>
 	
   <!-- Custom scripts -->
   <script src="scripts/app.js"></script>
   <script src="scripts/shared/app.ctrls.js"></script>
   <script src="scripts/shared/app.directives.js"></script>
-  <script src="scripts/shared/app.services.js"></script>
   <script src="scripts/ui/app.ui.ctrls.js"></script>
-  <script src="scripts/form/app.ui.form.ctrls.js"></script>
-  <script src="scripts/form/app.ui.form.directives.js"></script>
-  <script src="scripts/tables/app.ui.table.ctrls.js"></script>
-  <script src="scripts/charts/app.chart.ctrls.js"></script>
-  <script src="scripts/charts/app.chart.directives.js"></script>
-  <script src="scripts/todo/app.todo.js"></script>
-  <script src="scripts/email/app.email.ctrls.js"></script>
 	
   <!-- App scripts -->
   <script src="scripts/controllers/app.ui.admin.skill.js"></script>
