Ajustes generales a pantalla de administracion de competencias

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -42,6 +42,7 @@
   <!-- Vendors -->
   <script src="scripts/vendors/jquery.min.js"></script> <!-- load before angular -->
   <script src="scripts/vendors/angular.min.js"></script>
+  <script src="scripts/vendors/bootstrap.min.js"></script>
 
   <!-- Plugins -->
   <script src="scripts/plugins/angular-route.min.js"></script>
