Se agrego libreria para dialogs

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -43,6 +43,7 @@
   <script src="scripts/vendors/jquery.min.js"></script> <!-- load before angular -->
   <script src="scripts/vendors/angular.min.js"></script>
   <script src="scripts/vendors/bootstrap.min.js"></script>
+  <script src="scripts/vendors/bootbox.min.js"></script>
 
   <!-- Plugins -->
   <script src="scripts/plugins/angular-route.min.js"></script>
