Se incluyo toastr para notificaciones amigables.

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -18,6 +18,9 @@
   <!-- Css/Less Stylesheets -->
   <link rel="stylesheet" href="styles/vendors/bootstrap.min.css">
   <link rel="stylesheet/less" href="styles/main.less">
+
+  <!--Toastr -->
+  <link rel="stylesheet" href="styles/vendors/toastr.min.css">
 	
   <!-- Match Media polyfill for IE9 -->
   <!--[if IE 9]><!--> <script src="scripts/ie/matchMedia.js"></script>  <!--<![endif]--> 
@@ -44,6 +47,7 @@
   <script src="scripts/vendors/angular.min.js"></script>
   <script src="scripts/vendors/bootstrap.min.js"></script>
   <script src="scripts/vendors/bootbox.min.js"></script>
+  <script src="scripts/vendors/toastr.min.js"></script>
 
   <!-- Plugins -->
   <script src="scripts/plugins/angular-route.min.js"></script>
