Se realizaron ajustes en la cabecera y pagina inicial

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -8,39 +8,39 @@
   <meta name="author" content="bootstraphunter">
   <!-- <base href="/"> -->
 
-  <title>Plataforma de evaluaci&oacute;n</title>
+  <title>CSTI | Plataforma de evaluaci&oacute;n</title>
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Icons -->
   <link rel="stylesheet" href="fonts/font-awesome/font-awesome.css">
-	
+  
   <!-- Css/Less Stylesheets -->
   <link rel="stylesheet" href="styles/vendors/bootstrap.min.css">
   <link rel="stylesheet/less" href="styles/main.less">
 
   <!--Toastr -->
   <link rel="stylesheet" href="styles/vendors/toastr.min.css">
-	
+  
   <!-- Match Media polyfill for IE9 -->
   <!--[if IE 9]><!--> <script src="scripts/ie/matchMedia.js"></script>  <!--<![endif]--> 
  </head>
  <body ng-app="app" id="app" class="app {{themeActive}}" custom-page ng-class="{'layout-horizontal': isLayoutHorizontal}" ng-controller="AppCtrl">
   <header class="site-head clearfix" id="site-head" ng-include=" 'views/header.html' "></header>
-		
+    
   <div class="main-container clearfix">
    <aside class="nav-wrap" id="site-nav" ng-controller="NavCtrl" ng-include=" 'views/nav.html' " custom-scrollbar></aside>
 
    <div class="content-container" ng-class="{container: isLayoutHorizontal}" id="content" ng-view></div>
 
    <footer id="site-foot" class="site-foot clearfix">
-	<p class="left">&copy; Copyright 2014 <strong>APPBOARD</strong>, All rights reserved.</p>
-	<p class="right">v1.1</p>
+  <p class="left">&copy; Copyright 2016 <strong>CSTI | Chain Services Technology Information</strong>, All rights reserved.</p>
+  <p class="right">v1.0</p>
    </footer>
   </div>
 
   <!-- Dev only -->
-  <script src="scripts/dev/less.min.js"></script>	
+  <script src="scripts/dev/less.min.js"></script> 
 
   <!-- Vendors -->
   <script src="scripts/vendors/jquery.min.js"></script> <!-- load before angular -->
@@ -60,13 +60,13 @@
   <script src="scripts/plugins/perfect-scrollbar.min.js"></script>
   <script src="scripts/plugins/angular-skycons.min.js"></script>
   <script src="scripts/plugins/loading-bar.min.js"></script>
-	
+  
   <!-- Custom scripts -->
   <script src="scripts/app.js"></script>
   <script src="scripts/shared/app.ctrls.js"></script>
   <script src="scripts/shared/app.directives.js"></script>
   <script src="scripts/ui/app.ui.ctrls.js"></script>
-	
+  
   <!-- App scripts -->
   <script src="scripts/controllers/app.ui.admin.skill.js"></script>
   <script src="scripts/controllers/app.ui.admin.skill.types.js"></script>
