Se reemplazo por hoja de estilos .css en lugar de .less

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -17,7 +17,7 @@
   
   <!-- Css/Less Stylesheets -->
   <link rel="stylesheet" href="styles/vendors/bootstrap.min.css">
-  <link rel="stylesheet/less" href="styles/main.less">
+  <link rel="stylesheet" href="styles/main.css">
 
   <!--Toastr -->
   <link rel="stylesheet" href="styles/vendors/toastr.min.css">
@@ -38,9 +38,6 @@
   <p class="right">v1.0</p>
    </footer>
   </div>
-
-  <!-- Dev only -->
-  <script src="scripts/dev/less.min.js"></script> 
 
   <!-- Vendors -->
   <script src="scripts/vendors/jquery.min.js"></script> <!-- load before angular -->
