Se avanzo con pantalla de registro de preguntas

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -69,6 +69,7 @@
   <script src="scripts/controllers/app.ui.admin.skill.types.js"></script>
   <script src="scripts/controllers/app.ui.admin.skill.levels.js"></script>
   <script src="scripts/controllers/app.ui.admin.position.js"></script>
+  <script src="scripts/controllers/app.ui.admin.questions.js"></script>
 
  </body>
 </html>
