--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -70,6 +70,7 @@
   <script src="scripts/controllers/app.ui.admin.skill.levels.js"></script>
   <script src="scripts/controllers/app.ui.admin.position.js"></script>
   <script src="scripts/controllers/app.ui.admin.questions.js"></script>
+  <script src="scripts/controllers/app.ui.admin.projects.js"></script>
 
  </body>
 </html>
