Se avanzó con administracion de evaluaciones

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -40,11 +40,13 @@
   </div>
 
   <!-- Vendors -->
-  <script src="scripts/vendors/jquery.min.js"></script> <!-- load before angular -->
+  <script src="scripts/vendors/jquery.min.js"></script>
+  <script src="scripts/vendors/jquery.ui.sortable.min.js"></script> <!-- load before angular -->
   <script src="scripts/vendors/angular.min.js"></script>
   <script src="scripts/vendors/bootstrap.min.js"></script>
   <script src="scripts/vendors/bootbox.min.js"></script>
   <script src="scripts/vendors/toastr.min.js"></script>
+  <script src="scripts/vendors/sortable.js"></script>
 
   <!-- Plugins -->
   <script src="scripts/plugins/angular-route.min.js"></script>
@@ -55,6 +57,7 @@
   <script src="scripts/plugins/bootstrap-slider.min.js"></script>
   <script src="scripts/plugins/textAngular.min.js"></script>
   <script src="scripts/plugins/perfect-scrollbar.min.js"></script>
+  <script src="scripts/plugins/chartist.js"></script>
   <script src="scripts/plugins/angular-skycons.min.js"></script>
   <script src="scripts/plugins/loading-bar.min.js"></script>
   
@@ -63,14 +66,16 @@
   <script src="scripts/shared/app.ctrls.js"></script>
   <script src="scripts/shared/app.directives.js"></script>
   <script src="scripts/ui/app.ui.ctrls.js"></script>
+  <script src="scripts/form/app.ui.form.ctrls.js"></script>
   
   <!-- App scripts -->
   <script src="scripts/controllers/app.ui.admin.skill.js"></script>
   <script src="scripts/controllers/app.ui.admin.skill.types.js"></script>
   <script src="scripts/controllers/app.ui.admin.skill.levels.js"></script>
   <script src="scripts/controllers/app.ui.admin.position.js"></script>
-  <script src="scripts/controllers/app.ui.admin.questions.js"></script>
   <script src="scripts/controllers/app.ui.admin.projects.js"></script>
+  <script src="scripts/controllers/app.ui.admin.questions.js"></script>
+  <script src="scripts/controllers/app.ui.admin.tests.js"></script>
 
  </body>
 </html>
