--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -77,6 +77,7 @@
   <script src="scripts/controllers/app.ui.admin.questions.js"></script>
   <script src="scripts/controllers/app.ui.admin.tests.js"></script>
   <script src="scripts/controllers/app.ui.admin.tests.new.js"></script>
+  <script src="scripts/controllers/app.ui.admin.tests.edit.js"></script>
   <script src="scripts/controllers/app.ui.admin.teams.js"></script>
 
  </body>
