Se llego hasta la seleccion para rendir la evaluacion

--- a/concepttest-app/public/index.html
+++ b/concepttest-app/public/index.html
@@ -80,5 +80,7 @@
   <script src="scripts/controllers/app.ui.admin.tests.edit.js"></script>
   <script src="scripts/controllers/app.ui.admin.teams.js"></script>
 
+  <script src="scripts/controllers/app.ui.mytests.js"></script>
+
  </body>
 </html>
